# SimpleCanvas

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.rst  SimpleCanvas.VC.db  SimpleCanvas.sln  TODO.txt  buildRelease.sh  linuxBuildDebugAndRun.sh  linuxBuildReleaseAndRun.sh
Sandbox/: Sandbox.vcxproj
Sandbox/src/: BlendTexSquare.cpp  BlendTexSquare.h  ColorCube.cpp  ColorCube.h  Cube.cpp  Cube.h  Sandbox.cpp  Skybox.cpp  Skybox.h  Sponza.cpp  Sponza.h  Teapot.cpp  Teapot.h  TextureCube.cpp  TextureCube.h  TileMap.cpp  TileMap.h  Triangle.cpp  Triangle.h
Sandbox/src/Objects/: BlendTexSquare.cpp  BlendTexSquare.h  Building.h  ColorCube.cpp  ColorCube.h  Crosshair.cpp  Crosshair.h  Gun.cpp  Gun.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h  Skybox.cpp  Skybox.h  Sponza.cpp  Sponza.h  Target.cpp  Target.h  Teapot.cpp  Teapot.h  Terrain.cpp  Terrain.h  TextureCube.cpp  TextureCube.h  TileMap.cpp  TileMap.h  Triangle.cpp  Triangle.h
Sandbox/src/Scenes/: Scene.cpp  Scene.h
Sandbox/src/Targets/: HorizontalMovingTarget.cpp  RotatingTarget.cpp
Sandbox/src/World/: World.cpp  World.h
SimpleCanvas/: .CMakeLists.txt.swp  CMakeLists.txt  SimpleCanvas.vcxproj  SimpleCanvas.vcxproj.filters
SimpleCanvas/Glad/: CMakeLists.txt
SimpleCanvas/Glad/include/glad/: glad.h
SimpleCanvas/Glad/src/: glad.c
SimpleCanvas/Math/: CMakeLists.txt
SimpleCanvas/Math/MathTest/: CMakeLists.txt
SimpleCanvas/Math/MathTest/src/: Mat4Test.cpp  MathTest.cpp  Vec3Test.cpp
SimpleCanvas/Math/src/: Mat4.cpp  Mat4.h  Math.cpp  Math.h  Quat.cpp  Quat.h  Utility.cpp  Utility.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
SimpleCanvas/SCMath/: CMakeLists.txt  SCMath.h
SimpleCanvas/SCMath/SCMathTest/: CMakeLists.txt
SimpleCanvas/SCMath/SCMathTest/src/: Mat4Test.cpp  Vec3Test.cpp  main.cpp
SimpleCanvas/SCMath/src/: Mat4.cpp  Mat4.h  Quat.cpp  Quat.h  Utility.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
SimpleCanvas/src/: SimpleCanvas.h  stdafx.h
SimpleCanvas/src/SimpleCanvas/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  Canvas.h  Core.h  EntryPoint.h  Layer.cpp  Layer.h  LayerContainer.cpp  LayerContainer.h  Logger.cpp  Logger.h  Window.cpp  Window.h
SimpleCanvas/src/SimpleCanvas/Camera/: Camera.h  CameraController.cpp  CameraController.h  CameraSettings.h  FPSCamera.cpp  FPSCamera.h  Frustum.cpp  Frustum.h  PerspectiveCamera.cpp  Plane.cpp  Plane.h
SimpleCanvas/src/SimpleCanvas/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
SimpleCanvas/src/SimpleCanvas/Input/: Input.cpp  Input.h  InputBindings.h
SimpleCanvas/src/SimpleCanvas/ObjectLogic/: AABB.cpp  AABB.h  AABBCollider.cpp  AABBCollider.h  BaseMesh.cpp  BaseMesh.h  BoundingBox.cpp  BoundingBox.h  Collider.h  Lights.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Rigidbody.cpp  Rigidbody.h  RigidbodyComponent.cpp  RigidbodyComponent.h  Sphere.cpp  Sphere.h  SphereCollider.cpp  SphereCollider.h  TransformComponent.h
SimpleCanvas/src/SimpleCanvas/ObjectLogic/ObjectTree/: SCNode.cpp  SCNode.h  SCObject.cpp  SCObject.h
SimpleCanvas/src/SimpleCanvas/Renderables/: AABB.cpp  AABB.h  BaseMesh.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjLoader.cpp  ObjLoader.h
SimpleCanvas/src/SimpleCanvas/Renderables/ObjectTree/: SCNode.cpp  SCObject.cpp  SCObject.h
SimpleCanvas/src/SimpleCanvas/Renderer/: AssetsContainer.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  GLContext.cpp  GLContext.h  Mesh.h  Model.h  OrthoCamera.cpp  OrthoCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.h  RenderCommand.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2d.cpp  Texture2d.h  TextureContainer.cpp  TextureContainer.h  VertexArray.cpp  VertexArray.h
SimpleCanvas/src/SimpleCanvas/Tools/: StringUtils.h
SimpleCanvas/src/SimpleCanvas/Utils/: FileReader.h
SimpleGame/src/: SimpleGame.cpp
SimpleGame/src/Objects/: Building.cpp  Crosshair.cpp  Crosshair.h  Player.cpp  Terrain.cpp
SimpleGame/src/Scenes/: Scene.cpp  Scene.h
SimpleGame/src/Targets/: HorizontalMovingTarget.h  RotatingTarget.h  VerticalMovingTarget.cpp  VerticalMovingTarget.h
SimpleGame/src/World/: World.cpp  World.h
assets/models/RedSphere/: untitled.mtl
assets/shaders/: Cubemap_fragment.glsl  Cubemap_vertex.glsl  Debug_fragment.glsl  Debug_vertex.glsl  FlatColor_fragment.glsl  FlatColor_vertex.glsl  Texture_fragment.glsl  Texture_vertex.glsl
assets/textures/shaders/: Cubemap_fragment.glsl  Cubemap_vertex.glsl  FlatColor_fragment.glsl  FlatColor_vertex.glsl  Flat_vertex.glsl  Tex_vertex.glsl  Texture.glsl  Texture_fragment.glsl  Texture_vertex.glsl  ViewProj_fragment.glsl
